--- a/data/news
+++ b/data/news
@@ -16,7 +16,7 @@
         "sub_title": "Bellibolt - Pokédex Escarlata y Púrpura",
         "thumbnail": "https://media.vandal.net/i/620x348/10-2022/2022101415503042_4.jpg",
         "image_url": "https://media.vandal.net/i/1280x720/10-2022/2022101415503042_1.jpg.webp",
-        "description": "Bellibolt (ハラバリー Harabarī en japonés) es un Pokémon de tipo Eléctrico introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Electrorrana, fue revelado el 14 de octubre de 2022.\n\nCuando se publicó el último tráiler de Pokémon Escarlata y Púrpura, aquel en el que conocimos a la líder e-Nigma, se dejó caer que próximamente se presentaría a un nuevo Pokémon, el acompañante de esta entrenadora. Hoy por fin hemos podido ver a la nueva criatura que ampliará la Pokédex de Paldea, región en la que se ambienta la nueva entrega de la saga: se trata de Bellibolt, una especie de rana eléctrica capaz de producir energía con su ombligo.\n\nTal y como contó su entrenadora en el anterior vídeo, este nuevo Pokémon destaca por varias cosas: es tipo Eléctrico, es bastante lento y puede requerir que le ataquen antes de empezar a combatir, ya que es de naturaleza apacible. Además, su diseño llama la atención porque en realidad sus ojos no son las dos protuberancias blancas que vemos a cada lado de su cabeza, sino los pequeños orificios amarillos que tiene justo encima de la boca. Podéis ver el nuevo tráiler de Pokémon Escarlata y Púrpura a continuación.\n\nAsí es Bellibolt, el nuevo Pokémon de Escarlata y Púrpura\n\n"Bellibolt expande y contrae su elástico cuerpo para generar electricidad por un órgano que se asemeja a un ombligo", podemos leer en la descripción oficial de este nuevo Pokémon. "Toda esa energía generada se descarga a través de las dos protuberancias que tiene en la cabeza, que pueden confundirse con ojos. Sus verdaderos ojos son pequeños y adorables, así que Bellibolt aprovecha esta confusión cuando quiere intimidar a su oponente".\n\nA continuación podéis ver las principales características de Bellibolt:\n\n* Categoría: Pokémon Electrorrana\n\n* Tipo: Eléctrico\n\n* Altura: 1,2 m\n\n* Peso: 113 kg\n\n* Habilidad: Dinamo o Electricidad Estática\n\n Al igual que con Farigiraf, este nuevo Pokémon dispone de una habilidad inédita en la saga: se trata de Dinamo, que permite que el cuerpo de Bellibolt se cargue de electricidad al recibir daño, lo que potencia su siguiente movimiento de tipo Eléctrico. Es la primera vez que esta habilidad aparece en los juegos.\n\nBellibolt será el Pokémon acompañante de la entrenadora e-Nigma, líder del gimnasio de Ciudad Leudal. Podremos enfrentarnos a ella a partir del próximo 18 de noviembre, fecha en la que se lanzará Pokémon Escarlata y Púrpura de forma exclusiva para Nintendo Switch. Bajo estas líneas podéis ver una galería con las primeras imágenes de Bellibolt.",
+        "description": "Bellibolt (ハラバリー Harabarī en japonés) es un Pokémon de tipo Eléctrico introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Electrorrana, fue revelado el 14 de octubre de 2022.\n\nCuando se publicó el último tráiler de Pokémon Escarlata y Púrpura, aquel en el que conocimos a la líder e-Nigma, se dejó caer que próximamente se presentaría a un nuevo Pokémon, el acompañante de esta entrenadora. Hoy por fin hemos podido ver a la nueva criatura que ampliará la Pokédex de Paldea, región en la que se ambienta la nueva entrega de la saga: se trata de Bellibolt, una especie de rana eléctrica capaz de producir energía con su ombligo.\n\nTal y como contó su entrenadora en el anterior vídeo, este nuevo Pokémon destaca por varias cosas: es tipo Eléctrico, es bastante lento y puede requerir que le ataquen antes de empezar a combatir, ya que es de naturaleza apacible. Además, su diseño llama la atención porque en realidad sus ojos no son las dos protuberancias blancas que vemos a cada lado de su cabeza, sino los pequeños orificios amarillos que tiene justo encima de la boca. Podéis ver el nuevo tráiler de Pokémon Escarlata y Púrpura a continuación.\n\nAsí es Bellibolt, el nuevo Pokémon de Escarlata y Púrpura\n\nBellibolt expande y contrae su elástico cuerpo para generar electricidad por un órgano que se asemeja a un ombligo podemos leer en la descripción oficial de este nuevo Pokémon. Toda esa energía generada se descarga a través de las dos protuberancias que tiene en la cabeza, que pueden confundirse con ojos. Sus verdaderos ojos son pequeños y adorables, así que Bellibolt aprovecha esta confusión cuando quiere intimidar a su oponente.\n\nA continuación podéis ver las principales características de Bellibolt:\n\n* Categoría: Pokémon Electrorrana\n\n* Tipo: Eléctrico\n\n* Altura: 1,2 m\n\n* Peso: 113 kg\n\n* Habilidad: Dinamo o Electricidad Estática\n\n Al igual que con Farigiraf, este nuevo Pokémon dispone de una habilidad inédita en la saga: se trata de Dinamo, que permite que el cuerpo de Bellibolt se cargue de electricidad al recibir daño, lo que potencia su siguiente movimiento de tipo Eléctrico. Es la primera vez que esta habilidad aparece en los juegos.\n\nBellibolt será el Pokémon acompañante de la entrenadora e-Nigma, líder del gimnasio de Ciudad Leudal. Podremos enfrentarnos a ella a partir del próximo 18 de noviembre, fecha en la que se lanzará Pokémon Escarlata y Púrpura de forma exclusiva para Nintendo Switch. Bajo estas líneas podéis ver una galería con las primeras imágenes de Bellibolt.",
         "page_url": "https://www.cpokemon.com/escarlata-purpura/pokemon/bellibolt/"
       },
      {
