--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="jhoto_sixth_medal">Mineral</string>
     <string name="jhoto_seventh_medal">Glaciar</string>
     <string name="jhoto_eigth_medal">Dragón</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
