--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="pokemon_subtitle_evolution">Linea evolutiva</string>
     <string name="pokemon_subtitle_interesting_data">Datos interesantes</string>
     <string name="textview_custom_param">%1$s</string>
+    <string name="msg_pokemon_empty">No se encontro información</string>
+
 
     <!--Menu home-->
     <string name="menu_news">Noticias</string>
@@ -71,7 +73,6 @@
     <string name="jhoto_sixth_medal">Mineral</string>
     <string name="jhoto_seventh_medal">Glaciar</string>
     <string name="jhoto_eigth_medal">Dragón</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
