--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,13 @@
 
     <!-- Activity main-->
     <string name="textview_regions">Regiones</string>
-    <string name="textview_recent">Lo mas reciente</string>
-    <string name="search_textview_hint">Ingresa el numero del pokemon</string>
+    <string name="textview_recent">Las noticias más relevantes</string>
+    <string name="search_textview_hint">Ingresa el número del pokemon</string>
     <string name="textview_news">Noticias</string>
 
 
     <!-- Fragment regiones-->
-    <string name="textview_subtitle_region">Busca un Pokémon\nen cualquier</string>
+    <string name="textview_subtitle_region">Busca un Pokémon\nen cualquier región</string>
     <string name="textview_subtitle_region_pokemon"><b>%1$s</b> Pokémon encontrados \nen esta región</string>
 
     <!-- Fragment detail pokemon-->
@@ -17,9 +17,9 @@
     <string name="textview_subtitle_detail_pokedex">¿Qué dice la pokedex sobre\n%1$s?</string>
     <string name="pokemon_title_height">Altura</string>
     <string name="pokemon_title_weight">Peso</string>
-    <string name="pokemon_title_category">Categoria</string>
+    <string name="pokemon_title_category">Categoría</string>
     <string name="pokemon_title_ability">Habilidad</string>
-    <string name="pokemon_subtitle_stats">Estadisticas</string>
+    <string name="pokemon_subtitle_stats">Estadísticas</string>
     <string name="pokemon_title_stats_hp">Salud</string>
     <string name="pokemon_title_stats_attack">Ataque</string>
     <string name="pokemon_title_stats_defence">Defensa</string>
@@ -41,7 +41,7 @@
     <!-- Fragment detalle de tipos-->
     <string name="type_detail_title">Fortalezas y Debilidades</string>
     <string name="type_detail_none">Ninguno</string>
-    <string name="type_detail_effective">Super eficaz</string>
+    <string name="type_detail_effective">¡Super eficaz!</string>
     <string name="type_detail_weak">Poco eficaz</string>
     <string name="type_detail_resist">Inmune</string>
     <string name="type_detail_vulnerability">Vulnerable</string>
@@ -52,14 +52,14 @@
     <string name="menu_table_type">Tabla de tipos</string>
 
     <!--Msg General-->
-    <string name="general_error">Ocurrio un error intenta más tarde</string>
+    <string name="general_error">Ha ocurrido un error, por favor inténtelo de nuevo más tarde</string>
     <string name="internet_conextion">Error de conexión intenta más tarde</string>
 
 
     <!--Msg services-->
-    <string name="error_download_news">Ocurrio un error al recuperar las noticias</string>
-    <string name="error_download_pokemon_region">Ocurrio un error al recuperar los pokemon por region</string>
-    <string name="error_download_pokemon_detail">Ocurrio un error al recuperar la informacion de este pokémon</string>
+    <string name="error_download_news">Ha ocurrido un error al recuperar las noticias</string>
+    <string name="error_download_pokemon_region">Ha ocurrido un error al recuperar los pokémon por región</string>
+    <string name="error_download_pokemon_detail">Ha ocurrido un error al recuperar la información de este pokémon</string>
 
     <!--Types-->
     <string name="type_normal">NORMAL</string>
@@ -74,10 +74,10 @@
     <string name="type_fire">FUEGO</string>
     <string name="type_water">AGUA</string>
     <string name="type_grass">HIERBA</string>
-    <string name="type_electric">ELECTRICO</string>
-    <string name="type_psychic">PSIQUICO</string>
+    <string name="type_electric">ELÉCTRICO</string>
+    <string name="type_psychic">PSÍQUICO</string>
     <string name="type_ice">HIELO</string>
-    <string name="type_dragon">DRAGON</string>
+    <string name="type_dragon">DRAGÓN</string>
     <string name="type_fairy">HADA</string>
     <string name="type_dark">SINIESTRO</string>
 
@@ -92,7 +92,7 @@
     <string name="kanto_forth_medal">Arcoiris</string>
     <string name="kanto_fifth_medal">Alma</string>
     <string name="kanto_sixth_medal">Pantano</string>
-    <string name="kanto_seventh_medal">Volcan</string>
+    <string name="kanto_seventh_medal">Volcán</string>
     <string name="kanto_eigth_medal">Tierra</string>
 
     <!--Region Jhoto-->
@@ -107,7 +107,4 @@
     <string name="jhoto_sixth_medal">Mineral</string>
     <string name="jhoto_seventh_medal">Glaciar</string>
     <string name="jhoto_eigth_medal">Dragón</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
 </resources>
