--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="jhoto_sixth_medal">Mineral</string>
     <string name="jhoto_seventh_medal">Glaciar</string>
     <string name="jhoto_eigth_medal">Dragón</string>
+    <string name="coming_soon">Próximamente</string>
 </resources>
