I change copy beacsue politics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
 
     <!--Menu home-->
     <string name="menu_news">Noticias</string>
-    <string name="menu_pokemon">Pokémon</string>
+    <string name="menu_pokemon">Pokemonster</string>
     <string name="menu_table_type">Tabla de tipos</string>
 
     <!--Msg General-->
