--- a/data/news
+++ b/data/news
@@ -136,7 +136,7 @@
         "img_new_pokemon": "",
         "title": "¡Sigue el Campeonato Internacional Pokémon de Norteamérica 2024 y recibe una investigación temporal especial!",
         "sub_title": "Campeonato Internacional Pokémon",
-        "pokemon_name": "Mega-Banette",
+        "pokemon_name": "",
         "thumbnail": "https://lh3.googleusercontent.com/voapSVuYXtRHLFsXIXOYGsAtYX0ixwS7vuGHLbNgHKcQYXrEbBQQSNCyCAq3gr87J6sV-Q5rF_Qu7QCZcDlrQgbZ93fZ7H6Yv119qZi2s1FOuXA=w600-e365",
         "image_url": "https://lh3.googleusercontent.com/voapSVuYXtRHLFsXIXOYGsAtYX0ixwS7vuGHLbNgHKcQYXrEbBQQSNCyCAq3gr87J6sV-Q5rF_Qu7QCZcDlrQgbZ93fZ7H6Yv119qZi2s1FOuXA=w600-e365",
         "description": "Muchos Entrenadores llenos de ilusión están de camino a Nueva Orleans para participar en el Campeonato Internacional Pokémon de Norteamérica 2024 (NAIC, por sus siglas en inglés), el tercer y último Campeonato Internacional de la temporada 2024 de la Serie de Campeonatos. Será uno de los torneos más concurridos de la Serie de Campeonatos Pokémon, y contará con emocionantes competiciones para los jugadores de Pokémon GO de todo el mundo. Los jugadores de Pokémon GO pondrán a prueba sus habilidades y competirán por obtener un lugar en el Campeonato Mundial Pokémon 2024, que se celebrará en Honolulú, Hawái.\n\nPodrás ver muchos emocionantes combates Pokémon en directo desde Nueva Orleans durante todo el fin de semana, del viernes 7 de junio al domingo 9 de junio de 2024.\n\nSi sigues en directo la transmisión de este evento durante 30 minutos, recibirás un código a través de los Drops de Twitch para acceder a una investigación temporal exclusiva que te permitirá capturar al Altaria de MEweedle, con el que se proclamó vencedor en el Campeonato Internacional de Europa de este año.\n\nTodos los horarios se muestran en Hora de Verano del Pacífico (PDT). Los horarios son orientativos y están sujetos a cambios. El evento se transmitirá únicamente en inglés.",
