--- a/data/news
+++ b/data/news
@@ -39,7 +39,7 @@
         "start_date": "1716868724000",
         "start_date_string": "28 de mayo de 2024",
         "end_date": "",
-        "img_new_pokemon": "https://pokemon-project.com/pokedex/img/sprite/Home/256/775.png",
+        "img_new_pokemon": "https://staticg.sportskeeda.com/editor/2023/07/8d7be-16894079872389-1920.jpg?w=640",
         "title": "¡Relájense y disfruten durante el evento Arenas relajantes!",
         "sub_title": "¡Arenas relajantes!",
         "pokemon_name": "komala",
@@ -67,7 +67,7 @@
         "start_date": "1716955124000",
         "start_date_string": "29 de mayo de 2024",
         "end_date": "",
-        "img_new_pokemon": "https://pokemon-project.com/pokedex/img/sprite/Home/256/704.png",
+        "img_new_pokemon": "https://leekduck.com/assets/img/events/cd-2024-06-june-goomy-temp.jpg",
         "title": "Día de la Comunidad de junio de 2024: Goomy",
         "sub_title": "¡Goomy, el Pokémon Molusco!",
         "pokemon_name": "Goomy",
@@ -86,7 +86,7 @@
         "start_date": "1716955124000",
         "start_date_string": "29 de mayo de 2024",
         "end_date": "",
-        "img_new_pokemon": "https://pokemon-project.com/pokedex/img/sprite/Home/256/155.png",
+        "img_new_pokemon": "https://leekduck.com/assets/img/events/cd-2024-06-classic-cyndaquil.jpg",
         "title": "Día de la Comunidad clásico de junio de 2024: Cyndaquil",
         "sub_title": "¡Regresa Cyndaquil a Pokémon GO!",
         "pokemon_name": "Cyndaquil",
@@ -126,7 +126,7 @@
         "thumbnail": "https://lh3.googleusercontent.com/Tf6j0JRTxsJRygvHhPOohvufgqoE_snWeDaRogKs0Iu-mvVgbyszld7szyjGbOmg0KASnb8jXwIjBspwTL88OUP205Q48A4N3IEV7400s6-sh4A=w600-e365",
         "image_url": "https://lh3.googleusercontent.com/Tf6j0JRTxsJRygvHhPOohvufgqoE_snWeDaRogKs0Iu-mvVgbyszld7szyjGbOmg0KASnb8jXwIjBspwTL88OUP205Q48A4N3IEV7400s6-sh4A=w600-e365",
         "description": "Desde el viernes, 21 de junio a las 10:00, hasta el martes, 25 de junio de 2024 a las 20:00, hora local\n\n\n* El doble de Caramelos por eclosionar Huevos.\n\n* La mitad de distancia para eclosionar cuando los Huevos estén en las incubadoras durante el evento.\n\n*La cuarta parte de la distancia para eclosionar los tres primeros Huevos durante el evento usando el widget de eclosión de Huevos de Pokémon GO.\n\n*Más probabilidades de encontrar y eclosionar un Slugma variocolor y un Litleo variocolor.",
-        "page_url": "https://pokemongolive.com/post/naic-2024?hl=es"
+        "page_url": "https://pokemongolive.com/post/scorching-steps-2024?hl=es"
       },
       {
         "id": "16",
