--- a/data/news
+++ b/data/news
@@ -6,6 +6,21 @@
     "limit": 0,
     "offset": 0,
     "results": [
+ {
+        "id": "25",
+        "start_date": "1717649011000",
+        "start_date_string": "6 de junio de 2024",
+        "end_date": "",
+        "img_new_pokemon": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpRypgZHrjgi4LmwlFtS53W7WkdZ3Y5W5wpQd-JAFiBgFbGWeNzvqKlJWhtj7KBi_wYdQ&usqp=CAU",
+        "title": "¡A la playa con los Pokémon del Festival de Pokémon GO 2024: Madrid!",
+        "sub_title": "¡Pokémon del Festival de Pokémon GO 2024!",
+        "pokemon_name": "Crabrawler",
+  "pokemon_num": "739",
+        "thumbnail": "https://lh3.googleusercontent.com/LAlXW_42ZEE3pGRSDHcbRLJE3QpTFAeQpacpQ8mn7ONqyWSU8nSz-2ixS84ZMFVJ1T1-99MCjJg9ntdUu5oEYkMDM6HuFAx32x0ObRgAimt4qxE=w600-e365",
+        "image_url": "https://lh3.googleusercontent.com/LAlXW_42ZEE3pGRSDHcbRLJE3QpTFAeQpacpQ8mn7ONqyWSU8nSz-2ixS84ZMFVJ1T1-99MCjJg9ntdUu5oEYkMDM6HuFAx32x0ObRgAimt4qxE=w600-e365",
+        "description": "Entrenadores:\n\n¡Se prevé tiempo playero en Pokémon GO durante el evento Cala de espeleología! Exploren y descubran algunos de los Pokémon de tipos Agua y Roca del Festival de Pokémon GO 2024: Madrid, que aparecerán durante este evento mundial. Además, por primera vez, los Entrenadores de todo el mundo podrán encontrarse con un Crabrawler variocolor… Eso sí, ¡si tienen suerte!",
+        "page_url": "https://pokemongolive.com/post/go-fest-2024-spelunkers-cove?hl=es"
+      },
       {
         "id": "24",
         "start_date": "1716177524000",
