--- a/data/news
+++ b/data/news
@@ -6,33 +6,51 @@
     "limit": 0,
     "offset": 0,
     "results": [
- {
+      {
+        "id": null,
+        "start_date": null,
+        "end_date": null,
+        "img_new_pokemon": null,
+        "title": null,
+        "sub_title": null,
+        "pokemon_name": null,
+        "thumbnail": null,
+        "image_url": null,
+        "description": null,
+        "page_url": null,
+        "pokemon_num": null,
+        "pokemon_name_second": null,
+        "pokemon_num_second": null,
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+      {
         "id": "26",
-        "start_date": "1718685811000",
+        "start_date": 1718685811000,
         "start_date_string": "18 de junio de 2024",
         "end_date": "",
         "img_new_pokemon": "https://i.ytimg.com/vi/L4u2iPTGJpQ/maxresdefault.jpg",
         "title": "¡Pokémon GO celebra ocho años: ¡únanse a la diversión!",
         "sub_title": "¡Fiesta del 8.º aniversario de Pokémon GO!",
         "pokemon_name": "Grimer",
-  "pokemon_num": "88",
- "pokemon_name_second": "Muk",
+        "pokemon_num": "88",
+        "pokemon_name_second": "Muk",
         "pokemon_num_second": "89",
         "thumbnail": "https://lh3.googleusercontent.com/P3szAPMm_xrA3Mbm1aDbUpxhpeCNhm8Qe81EeIR5zcVPUZR9KcZrXX43ZoNtWvu364WDe1j3tlQwRxQytU2Q54qhJfuQ8hzmQLOn3yAV_M1Xu7Y=w600-e365",
         "image_url": "https://lh3.googleusercontent.com/P3szAPMm_xrA3Mbm1aDbUpxhpeCNhm8Qe81EeIR5zcVPUZR9KcZrXX43ZoNtWvu364WDe1j3tlQwRxQytU2Q54qhJfuQ8hzmQLOn3yAV_M1Xu7Y=w600-e365",
         "description": "Entrenadores:\n\nDel viernes, 28 de junio a las 10:00, al miércoles, 3 de julio de 2024 a las 20:00, hora local\nDebuts de Pokémon\n\n¡Durante este evento aparecerán nuevos Pokémon disfrazados!\n\nGrimer con sombrero de fiesta*\nMuk con sombrero de fiesta\n*Con un poco de suerte, ¡podrán encontrarse con uno brillante!",
         "page_url": "https://pokemongolive.com/post/pokemongo-8th-anniversary?hl=es"
       },
- {
+      {
         "id": "25",
-        "start_date": "1717649011000",
+        "start_date": 1717649011000,
         "start_date_string": "6 de junio de 2024",
         "end_date": "",
         "img_new_pokemon": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpRypgZHrjgi4LmwlFtS53W7WkdZ3Y5W5wpQd-JAFiBgFbGWeNzvqKlJWhtj7KBi_wYdQ&usqp=CAU",
         "title": "¡A la playa con los Pokémon del Festival de Pokémon GO 2024: Madrid!",
         "sub_title": "¡Pokémon del Festival de Pokémon GO 2024!",
         "pokemon_name": "Crabrawler",
-  "pokemon_num": "739",
+        "pokemon_num": "739",
         "thumbnail": "https://lh3.googleusercontent.com/LAlXW_42ZEE3pGRSDHcbRLJE3QpTFAeQpacpQ8mn7ONqyWSU8nSz-2ixS84ZMFVJ1T1-99MCjJg9ntdUu5oEYkMDM6HuFAx32x0ObRgAimt4qxE=w600-e365",
         "image_url": "https://lh3.googleusercontent.com/LAlXW_42ZEE3pGRSDHcbRLJE3QpTFAeQpacpQ8mn7ONqyWSU8nSz-2ixS84ZMFVJ1T1-99MCjJg9ntdUu5oEYkMDM6HuFAx32x0ObRgAimt4qxE=w600-e365",
         "description": "Entrenadores:\n\n¡Se prevé tiempo playero en Pokémon GO durante el evento Cala de espeleología! Exploren y descubran algunos de los Pokémon de tipos Agua y Roca del Festival de Pokémon GO 2024: Madrid, que aparecerán durante este evento mundial. Además, por primera vez, los Entrenadores de todo el mundo podrán encontrarse con un Crabrawler variocolor… Eso sí, ¡si tienen suerte!",
@@ -40,7 +58,7 @@
       },
       {
         "id": "24",
-        "start_date": "1716177524000",
+        "start_date": 1716177524000,
         "start_date_string": "28 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "",
@@ -54,7 +72,7 @@
       },
       {
         "id": "23",
-        "start_date": "1716868724000",
+        "start_date": 1716868724000,
         "start_date_string": "28 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "",
@@ -68,7 +86,7 @@
       },
       {
         "id": "22",
-        "start_date": "1716868724000",
+        "start_date": 1716868724000,
         "start_date_string": "28 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "https://staticg.sportskeeda.com/editor/2023/07/8d7be-16894079872389-1920.jpg?w=640",
@@ -82,7 +100,7 @@
       },
       {
         "id": "21",
-        "start_date": "1716955124000",
+        "start_date": 1716955124000,
         "start_date_string": "29 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "https://pokemon-project.com/pokedex/img/sprite/Home/256/800.png",
@@ -96,7 +114,7 @@
       },
       {
         "id": "20",
-        "start_date": "1716955124000",
+        "start_date": 1716955124000,
         "start_date_string": "29 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "https://leekduck.com/assets/img/events/cd-2024-06-june-goomy-temp.jpg",
@@ -115,7 +133,7 @@
       },
       {
         "id": "19",
-        "start_date": "1716955124000",
+        "start_date": 1716955124000,
         "start_date_string": "29 de mayo de 2024",
         "end_date": "",
         "img_new_pokemon": "https://leekduck.com/assets/img/events/cd-2024-06-classic-cyndaquil.jpg",
@@ -134,7 +152,7 @@
       },
       {
         "id": "18",
-        "start_date": "1717387124000",
+        "start_date": 1717387124000,
         "start_date_string": "3 de junio de 2024",
         "end_date": "",
         "img_new_pokemon": "",
@@ -148,7 +166,7 @@
       },
       {
         "id": "17",
-        "start_date": "1717559924000",
+        "start_date": 1717559924000,
         "start_date_string": "5 de junio de 2024",
         "end_date": "",
         "img_new_pokemon": "https://archives.bulbagarden.net/media/upload/e/e6/0935Charcadet.png",
@@ -162,7 +180,7 @@
       },
       {
         "id": "16",
-        "start_date": "1717646324000",
+        "start_date": 1717646324000,
         "start_date_string": "6 de junio de 2024",
         "end_date": "1717732724000",
         "img_new_pokemon": "",
