--- a/data/news
+++ b/data/news
@@ -6,19 +6,37 @@
     "limit": 0,
     "offset": 0,
     "results": [
-      {
+ {
         "id": null,
         "start_date": null,
         "end_date": null,
-        "img_new_pokemon": null,
         "title": null,
         "sub_title": null,
-        "pokemon_name": null,
+        "img_new_pokemon": null,
         "thumbnail": null,
         "image_url": null,
         "description": null,
         "page_url": null,
+        "pokemon_name": null,
         "pokemon_num": null,
+        "pokemon_name_second": null,
+        "pokemon_num_second": null,
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+      {
+        "id": 27,
+        "start_date": 1718772211000,
+        "end_date": null,
+        "title": "¡Mega-Rayquaza surcará los cielos del mundo en las nuevas incursiones élite!",
+        "sub_title": "Incursión élite: Mega-Rayquaza",
+        "img_new_pokemon": "https://i.ytimg.com/vi/06_k5wdOqyo/maxresdefault.jpg",
+        "thumbnail": "https://lh3.googleusercontent.com/fJdFQzhZwp5bCe217jLFGe3rO35MHYFkdXWUlsMprUIKLK36p8cc7-W_DaB64yO_QK7v6pQBsQwY97zYcmqdndnTySgDnDolIURVFMxVKQKb87U=w640-e365",
+        "image_url": "https://lh3.googleusercontent.com/fJdFQzhZwp5bCe217jLFGe3rO35MHYFkdXWUlsMprUIKLK36p8cc7-W_DaB64yO_QK7v6pQBsQwY97zYcmqdndnTySgDnDolIURVFMxVKQKb87U=w640-e365",
+        "description": "Incursión élite: Mega-Rayquaza\n\n¡Mega-Rayquaza aparecerá con más frecuencia en incursiones élite a las siguientes horas!\n\nSábado 29 de junio de 2024, a las 12:00, hora local\nSábado 29 de junio de 2024, a la 13:00, hora local\nSábado 29 de junio de 2024, a las 17:00, hora local\nSábado 29 de junio de 2024, a las 18:00, hora local",
+        "page_url": "https://pokemongolive.com/post/mega-rayquaza-elite-raids-2024?hl=es",
+        "pokemon_name": "Mega-Rayquaza",
+        "pokemon_num": "384",
         "pokemon_name_second": null,
         "pokemon_num_second": null,
         "pokemon_name_third": null,
