--- a/data/news
+++ b/data/news
@@ -6,7 +6,7 @@
     "limit": 0,
     "offset": 0,
     "results": [
- {
+      {
         "id": null,
         "start_date": null,
         "end_date": null,
@@ -21,6 +21,24 @@
         "pokemon_num": null,
         "pokemon_name_second": null,
         "pokemon_num_second": null,
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+   {
+        "id": 28,
+        "start_date": 1719204211000,
+        "end_date": null,
+        "title": "Día de la Comunidad de julio de 2024: Tynamo",
+        "sub_title": "Día de la Comunidad Tynamo",
+        "img_new_pokemon": "https://lh3.googleusercontent.com/okQrqOLX_kgTTruge6-BJEwmw1ki2jrQyur4SN-PM3q7g5Sy8NaBkCNoLi5vGNY6BA30L7v8K1KooIPpth4xhcF-fnujnKEnIbxZSdpyM-JK3w=w640-e365",
+        "thumbnail": "https://lh3.googleusercontent.com/okQrqOLX_kgTTruge6-BJEwmw1ki2jrQyur4SN-PM3q7g5Sy8NaBkCNoLi5vGNY6BA30L7v8K1KooIPpth4xhcF-fnujnKEnIbxZSdpyM-JK3w=w640-e365",
+        "image_url": "https://lh3.googleusercontent.com/pYgfUi1xqzS8BpdtX-NbmtfQnKTXluKk3_Kxwe0RZjQkmsHacRehmAgG_2JW2zKV_7uKG0yl2QpIrZee-zXNG1KoACzxUQApHyrBGD-57agCTQ=e365-s0",
+        "description": "Domingo 21 de julio de 2024, de 14:00 a 17:00, hora local\n\nPokémon destacado\n\nTynamo aparecerá en estado salvaje con más frecuencia.*\n*Con un poco de suerte, ¡se podrán encontrar con uno variocolor!",
+        "page_url": "https://pokemongolive.com/post/communityday-july-2024-tynamo?hl=es",
+        "pokemon_name": Tynamo,
+        "pokemon_num": "602",
+        "pokemon_name_second": "Eelektrik",
+        "pokemon_num_second": "603",
         "pokemon_name_third": null,
         "pokemon_num_third": null
       },
