--- a/data/news
+++ b/data/news
@@ -53,7 +53,7 @@
         "image_url": "https://lh3.googleusercontent.com/pYgfUi1xqzS8BpdtX-NbmtfQnKTXluKk3_Kxwe0RZjQkmsHacRehmAgG_2JW2zKV_7uKG0yl2QpIrZee-zXNG1KoACzxUQApHyrBGD-57agCTQ=e365-s0",
         "description": "Domingo 21 de julio de 2024, de 14:00 a 17:00, hora local\n\nPokémon destacado\n\nTynamo aparecerá en estado salvaje con más frecuencia.*\n*Con un poco de suerte, ¡se podrán encontrar con uno variocolor!",
         "page_url": "https://pokemongolive.com/post/communityday-july-2024-tynamo?hl=es",
-        "pokemon_name": Tynamo,
+        "pokemon_name": "Tynamo",
         "pokemon_num": "602",
         "pokemon_name_second": "Eelektrik",
         "pokemon_num_second": "603",
