--- a/data/news
+++ b/data/news
@@ -24,7 +24,61 @@
         "pokemon_name_third": null,
         "pokemon_num_third": null
       },
-  {
+      {
+        "id": 33,
+        "start_date": 1721105011000,
+        "end_date": null,
+        "title": "¡Mega-Lucario desata su aura en un evento de día de incursiones de Ultrabonus!",
+        "sub_title": "¡Ultrabonus: día de incursiones de Mega-Lucario!",
+        "img_new_pokemon": "https://admin.esports.gg/wp-content/uploads/2024/07/GSYYQ4MXwAAAtZ1-968x544.jpeg",
+        "thumbnail": "https://lh3.googleusercontent.com/JlvTezkcnB8vqSJKZrXg1dI1UBzeLZAy199xkqvSaCD26pLNhxahIMxqZaHrMWRg11kLYkCjH_qAUh2ouwA5wMjhboL5OTGzEbRz-gNWmCjbTw=w640-e365",
+        "image_url": "https://lh3.googleusercontent.com/JlvTezkcnB8vqSJKZrXg1dI1UBzeLZAy199xkqvSaCD26pLNhxahIMxqZaHrMWRg11kLYkCjH_qAUh2ouwA5wMjhboL5OTGzEbRz-gNWmCjbTw=w640-e365",
+        "description": "Sábado 27 de julio de 2024, de 11:00 a 17:00 (hora local)\n\nDebut de Pokémon megaevolucionados\n\n¡Mega-Lucario* hará su debut en las megaincursiones de Pokémon GO!\n\n* Con un poco de suerte, ¡podrán encontrarse con un Lucario variocolor!",
+        "page_url": "https://pokemongolive.com/post/mega-lucario-raid-ultra-unlock?hl=es",
+        "pokemon_name": "Riolu",
+        "pokemon_num": "447",
+        "pokemon_name_second": "Lucario",
+        "pokemon_num_second": "448",
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+      {
+        "id": 32,
+        "start_date": 1721105011000,
+        "end_date": null,
+        "title": "¡Togedemaru variocolor debuta de forma enérgica en Ultrabonus: Fuerte como el acero!",
+        "sub_title": "¡Ultrabonus: Fuerte como el acero!",
+        "img_new_pokemon": "https://staticg.sportskeeda.com/editor/2022/09/ebe0d-16632620578847-1920.jpg?w=640",
+        "thumbnail": "https://lh3.googleusercontent.com/usTHCpXep9oVcfZXS8WlilODfI8dckMTFHNkaSAHCc0llwk08XrtCxEn3K7sSjJv9kWbjWINUOe6EmzVxX11p8TN22DmwYdiA2QN4Lw8TPuz=w640-e365",
+        "image_url": "https://lh3.googleusercontent.com/usTHCpXep9oVcfZXS8WlilODfI8dckMTFHNkaSAHCc0llwk08XrtCxEn3K7sSjJv9kWbjWINUOe6EmzVxX11p8TN22DmwYdiA2QN4Lw8TPuz=w640-e365",
+        "description": "Desde el jueves, 25 de julio, a las 10:00, hasta el martes, 30 de julio de 2024, a las 20:00 (hora local)\n\nBonus del evento\n\nEntrenadores de nivel 31 y superior: Caramelo XL adicional por capturar Pokémon.\nLos Entrenadores de nivel 31 y superior tendrán más probabilidades de recibir Caramelos XL por capturar Pokémon con un buen lanzamiento o mejor.\nCaramelo adicional por buenos lanzamientos o mejores.\nTriple de Polvos Estelares por capturar Pokémon.",
+        "page_url": "https://pokemongolive.com/post/ultra-unlock-strength-of-steel?hl=es",
+        "pokemon_name": "Togedemaru",
+        "pokemon_num": "777",
+        "pokemon_name_second": null,
+        "pokemon_num_second": null,
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+      {
+        "id": 31,
+        "start_date": 1721018611000,
+        "end_date": null,
+        "title": "¡Amplíen sus horizontes en Bajo el Mismo Cielo con el boleto Creciendo juntos!",
+        "sub_title": "¡Creciendo juntos!",
+        "img_new_pokemon": "https://static1.srcdn.com/wordpress/wp-content/uploads/2024/07/pokemon-go-tandemaus-maushold.jpg",
+        "thumbnail": "https://lh3.googleusercontent.com/Q_wWg9PPi__CxaVMEa4dv4VeOEq5zRiK_t-Xliw7xPMIoBPM5JuzF2QAkWzHwqP8ulQl_8WZR2WauMygzwz43as1VTYKUeOlYYyEQ5J5jDkfhx8=w640-e365",
+        "image_url": "https://lh3.googleusercontent.com/Q_wWg9PPi__CxaVMEa4dv4VeOEq5zRiK_t-Xliw7xPMIoBPM5JuzF2QAkWzHwqP8ulQl_8WZR2WauMygzwz43as1VTYKUeOlYYyEQ5J5jDkfhx8=w640-e365",
+        "description": "Entrenadores:\n\nA partir del miércoles 17 de julio de 2024 podrán comprar el boleto Creciendo juntos para la última Temporada de Pokémon GO “Bajo el Mismo Cielo”. Con este boleto, recibirán 5 veces más de PX al girar la primera Poképarada del día hasta que finalice la temporada. Además, podrán ampliar su experiencia con una investigación temporal prémium donde ganarán objetos prémium y encuentros con Pokémon que tengan requisitos especiales de evolución.\n\nCuando hayas completado las tareas de la investigación temporal prémium de Creciendo juntos, tendrán hasta el 3 de septiembre de 2024 a las 10:00 (hora local) para reclamar sus recompensas.\n\nEl boleto Creciendo juntos estará a la venta hasta el 1 de agosto de 2024 a las 19:59 (hora local). ¡Tienen suficiente tiempo para ampliar sus horizontes en Bajo el Mismo Cielo!\n\nNo olviden echar un vistazo a la tienda del juego, ¡nunca se sabe qué los estará esperando!\n\n¡Vamos!",
+        "page_url": "https://pokemongolive.com/post/grow-together-ticket?hl=es",
+        "pokemon_name": "Tandemaus",
+        "pokemon_num": "924",
+        "pokemon_name_second": "Maushold",
+        "pokemon_num_second": "925",
+        "pokemon_name_third": null,
+        "pokemon_num_third": null
+      },
+      {
         "id": 30,
         "start_date": 1719290611000,
         "end_date": null,
@@ -60,7 +114,7 @@
         "pokemon_name_third": null,
         "pokemon_num_third": null
       },
-   {
+      {
         "id": 28,
         "start_date": 1719204211000,
         "end_date": null,
